--- a/minecraft/gradle.properties
+++ b/minecraft/gradle.properties
@@ -1,16 +1,16 @@
 module_name = minecraft
 
-java_version = 17
+java_version = 21
 
 
-modmenu_version     = 7.0.1
+modmenu_version     = 10.0.0-beta.1
 bendylib_version    = 4.0.0
-player_anim         = 1.0.2-rc1+1.20
+player_anim         = 1.0.3-a+1.20.6
 
 
 # Minecraft dependency setup
-minecraft_version=1.20.1
+minecraft_version=1.20.6
 
 #Fabric api
-fabric_version=0.83.0+1.20.1
-forge_version=47.0.1
+fabric_version=0.100.0+1.20.6
+forge_version=50.1.0
