--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -1,8 +1,8 @@
 name: Crowdin Action
 
 on:
-  schedule:
-    - cron: '42 0 * * *'
+  #schedule:
+   # - cron: '42 0 * * *'
   workflow_dispatch:
 
 
