--- a/emotesAssets/build.gradle
+++ b/emotesAssets/build.gradle
@@ -9,7 +9,7 @@ plugins {
 //apply plugin: "architectury-plugin"
 //apply plugin: 'com.github.johnrengelman.shadow'
 
-version = rootProject.mod_version
+version = project.version_base
 
 configurations {
     dev
@@ -129,20 +129,6 @@ publishing {
 
     // select the repositories you want to publish to
     repositories {
-        // uncomment to publish to the local maven
-        if (project.keysExists) {
-            repositories {
-                maven {
-                    url = 'https://maven.kosmx.dev/'
-                    credentials {
-                        username = 'kosmx'
-                        password = project.keys.kosmx_maven
-                    }
-                }
-            }
-        }
-        else {
-            mavenLocal()
-        }
+        mavenLocal()
     }
 }
