--- a/gradle.properties
+++ b/gradle.properties
@@ -23,9 +23,9 @@ bungee_api      = 1.16-R0.5-SNAPSHOT
 #minecraft_version=1.17
 #yarn_mappings=1.17-rc2+build.10
 
-loader_version=0.15.+
+loader_version=0.16.+
 
 #Fabric api
 #fabric_version=0.34.9+1.17
 
-player_anim_core=0.4.0
+player_anim_core=1.0.2-rc1+1.21
