--- a/minecraft/fabric/build.gradle
+++ b/minecraft/fabric/build.gradle
@@ -21,7 +21,7 @@ loom{
 
 archivesBaseName = "${project.archives_base_name}-for-MC${project.minecraft_version}"
 
-version = rootProject.mod_version
+version = project.version_base
 
 
 configurations {
@@ -129,35 +129,5 @@ publishing {
     repositories {
         // uncomment to publish to the local maven
         mavenLocal()
-    }
-}
-
-
-import com.modrinth.minotaur.dependencies.ModDependency
-
-if(keysExists) {
-    modrinth {
-        versionType = project.cfType
-
-        uploadFile = remapJar
-
-        token = project.keys.modrinth_token
-        // Get the GitHub Access Token you got from the basics part of this tutorial.
-        projectId = "pZ2wrerK" // Enter your modrinth mod ID here.
-        //System.out.println("Enter the version number:");
-        versionNumber = "${project.mod_version}+${project.minecraft_version}-fabric"
-        versionName = "${project.mod_version}"
-
-        gameVersions = ["1.20.5", "1.20.6"]
-        changelog = changes
-        loaders = ["fabric", "quilt"]
-        failSilently = false
-
-        dependencies {
-            required.project "fabric-api"
-            optional.project "modmenu"
-            embedded.project "bendy-lib"
-            embedded.project "playeranimator"
-        }
     }
 }
