--- a/minecraft/forge/build.gradle
+++ b/minecraft/forge/build.gradle
@@ -25,7 +25,7 @@ project.java
 
 archivesBaseName = "${project.archives_base_name}-for-MC${project.minecraft_version}"
 
-version = rootProject.mod_version
+version = project.version_base
 
 
 loom{
@@ -139,31 +139,5 @@ publishing {
     repositories {
         // uncomment to publish to the local maven
         mavenLocal()
-    }
-}
-
-
-if(keysExists) {
-    modrinth {
-        versionType = project.cfType
-
-        uploadFile = remapJar
-
-        token = project.keys.modrinth_token
-        // Get the GitHub Access Token you got from the basics part of this tutorial.
-        projectId = "pZ2wrerK" // Enter your modrinth mod ID here.
-        //System.out.println("Enter the version number:");
-        versionNumber = "${project.mod_version}+${project.minecraft_version}-forge"
-        versionName = "${project.mod_version}"
-
-        gameVersions = ["1.20", "1.20.1"]
-        changelog = changes
-        loaders = ["forge"]
-        failSilently = false
-
-        dependencies {
-            optional.project "bendy-lib"
-            required.project "playeranimator"
-        }
     }
 }
