--- a/minecraft/gradle.properties
+++ b/minecraft/gradle.properties
@@ -3,14 +3,13 @@ module_name = minecraft
 java_version = 21
 
 
-modmenu_version     = 10.0.0-beta.1
-bendylib_version    = 4.0.0
-player_anim         = 1.0.3-a+1.20.6
+modmenu_version     = 11.0.1
+bendylib_version    = 5.0-rc2
+player_anim         = 1.0.2-rc1+1.21
 
 
 # Minecraft dependency setup
-minecraft_version=1.20.6
+minecraft_version=1.21
 
 #Fabric api
-fabric_version=0.100.0+1.20.6
-forge_version=50.1.0
+fabric_version=0.100.7+1.21
