--- a/emotesServer/build.gradle
+++ b/emotesServer/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
 }
 
-version = project.version_base
+
 
 repositories {
     mavenCentral()
@@ -55,13 +55,13 @@ publishing {
                 def apiNode = depsNode.appendNode("dependency")
                 apiNode.appendNode("groupId", project.group)
                 apiNode.appendNode("artifactId", "emotesAPI")
-                apiNode.appendNode("version", project.version)
+                apiNode.appendNode("version", project.version_base)
                 apiNode.appendNode("scope", "compile")
 
                 def executorNode = depsNode.appendNode("dependency")
                 executorNode.appendNode("groupId", project.group)
                 executorNode.appendNode("artifactId", "emotesExecutor")
-                executorNode.appendNode("version", project.version)
+                executorNode.appendNode("version", project.version_base)
                 executorNode.appendNode("scope", "compile")
             }
 
